CSS font adjustments to fix layout problems.

--- a/main.css
+++ b/main.css
@@ -1,16 +1,17 @@
 window {
-  background-color: #575757
+  background-color: #575757;
 }
 
 grid {
-  background-color: #575757
+  background-color: #575757;
 }
 
 button {
   background-color: #F2CC8F;
   border-radius: 5px;
   border: 1px solid #464646;
-  padding: 10px 30px;
+  padding: 10px 20px;
+  font-size: 17px;
 }
 
 button:hover:active {
